# ddns

./: .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  Readme.md
.github/workflows/: docker-image.yml  release.yml  rust.yml
src/: cloudflare.rs  config.rs  dns.rs  icanhazip.rs  lib.rs  main.rs
